crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__config_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 14
expression: "crate::tests::parsing_expr_string(\"{\")"
---
Node {
    node: Config(
        ConfigExpr {
            items: [],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 1,
}

