crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__config_recovery_5.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_expr_string(r#\"{\n    a = 1\n    b = 2\n    \"#)"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "a",
                                                filename: "",
                                                line: 2,
                                                column: 4,
                                                end_line: 2,
                                                end_column: 5,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 2,
                                column: 4,
                                end_line: 2,
                                end_column: 5,
                            },
                        ),
                        value: Node {
                            node: NumberLit(
                                NumberLit {
                                    binary_suffix: None,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            filename: "",
                            line: 2,
                            column: 8,
                            end_line: 2,
                            end_column: 9,
                        },
                        operation: Override,
                    },
                    filename: "",
                    line: 2,
                    column: 4,
                    end_line: 2,
                    end_column: 9,
                },
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "b",
                                                filename: "",
                                                line: 3,
                                                column: 4,
                                                end_line: 3,
                                                end_column: 5,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 3,
                                column: 4,
                                end_line: 3,
                                end_column: 5,
                            },
                        ),
                        value: Node {
                            node: NumberLit(
                                NumberLit {
                                    binary_suffix: None,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                            filename: "",
                            line: 3,
                            column: 8,
                            end_line: 3,
                            end_column: 9,
                        },
                        operation: Override,
                    },
                    filename: "",
                    line: 3,
                    column: 4,
                    end_line: 3,
                    end_column: 9,
                },
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Missing(
                                    MissingExpr,
                                ),
                                filename: "",
                                line: 4,
                                column: 4,
                                end_line: 4,
                                end_column: 4,
                            },
                        ),
                        value: Node {
                            node: Missing(
                                MissingExpr,
                            ),
                            filename: "",
                            line: 4,
                            column: 4,
                            end_line: 4,
                            end_column: 4,
                        },
                        operation: Override,
                    },
                    filename: "",
                    line: 4,
                    column: 4,
                    end_line: 4,
                    end_column: 4,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 4,
    end_column: 4,
}
